--- a/frontend_mentor/css/fylo-data-storage.html
+++ b/frontend_mentor/css/fylo-data-storage.html
@@ -20,25 +20,26 @@
         <div class="shape">
             <div class="shape1">
 
-                <div class="logo" ><img src="../image_frontend/logo.svg"></div>
+                <div class="logo"><img src="../image_frontend/fylo.svg"></div>
                 <div class="icon">
-                <div class="document">
-                    <img src="../image_frontend/icon-document.svg">
+                    <div class="document">
+                        <img src="../image_frontend/icon-document.svg">
+                    </div>
+                    <div class="folder"> <img src="../image_frontend/icon-folder.svg"></div>
+                    <div class="upload"><img src="../image_frontend/icon-upload.svg"></div>
                 </div>
-                <div class="folder"> <img src="../image_frontend/icon-folder.svg"></div>
-                <div class="upload"><img src="../image_frontend/icon-upload.svg"></div>
             </div>
         </div>
-    </div>
         <div class="shape2">
             <div class="text">You’ve used 815 GB of your storage</div>
             <div class="slidecontainer">
-                <input type="range" min="0"GB max="1000" value="815" class="slider">
-            </div><div class="bubble">
+                <input type="range" min="0" GB max="1000" value="815" class="slider">
+            </div>
+            <div class="bubble">
                 <div class="storage">
-                  <span class="msg"> 185</span> GB LEFT
+                    <span class="msg"> 185</span> GB LEFT
                 </div>
-              </div>
+            </div>
 
             <div class="limit">
                 <p>0GB</p>
