--- a/frontend_mentor/css/huddle_landing_curve.html
+++ b/frontend_mentor/css/huddle_landing_curve.html
@@ -18,30 +18,40 @@
     <main class="container">
         <div class="first">
             <header>
-                <img class="logo" src="../image_frontend/logo.svg">
+                <img class="logo" src="../image_frontend/huddle.svg">
                 <button class="try" type="button" onclick="">Try it Free</button>
-           </header>
+            </header>
         </div>
         <div class="second">
             <h2>Build The Community Your Fans Will Love</h2>
-            <p>Huddle re-imagines the way we build communities. You have a<br> voice, but so does 
+            <p>Huddle re-imagines the way we build communities. You have a<br> voice, but so does
                 your audience. Create connections with your<br> users as you engage in genuine discussion. </p>
-                <button class="start" type="button" onclick="">
-                    Get Started For Free
+            <button class="start" type="button" onclick="">
+                Get Started For Free
 
-                </button>
+            </button>
         </div>
         <div class="third"><img class="one" src="../image_frontend/illustration-mockups.svg"></div>
-        <div class="fourth"><div class="left">
-            <span>1.4k+</span><p>Communities Formed</p>
-        </div><div class="right"><span>2.7m+</span><p>Messages Sent</p></div></div>
-        <div class="fifth_top"><img src="../image_frontend/bg-section-top-desktop-1.svg"></div> <div class="fifth"><div class="left5" align="left">
-            <h2>Grow Together</h2>
-            <p> Generate meaningful discussions with your audience and build a strong, loyal community.
-                Think of the insightful conversations you miss out on with a feedback form.
-            </p>
-        </div><div class="fifth_bot"><img src="../image_frontend/bg-section-bottom-mobile-1.svg"></div>
-        <div class="right5"><img src="../image_frontend/illustration-grow-together.svg" class="pic"></div></div>
+        <div class="fourth">
+            <div class="left">
+                <span>1.4k+</span>
+                <p>Communities Formed</p>
+            </div>
+            <div class="right"><span>2.7m+</span>
+                <p>Messages Sent</p>
+            </div>
+        </div>
+        <div class="fifth_top"><img src="../image_frontend/bg-section-top-desktop-1.svg"></div>
+        <div class="fifth">
+            <div class="left5" align="left">
+                <h2>Grow Together</h2>
+                <p> Generate meaningful discussions with your audience and build a strong, loyal community.
+                    Think of the insightful conversations you miss out on with a feedback form.
+                </p>
+            </div>
+            <div class="fifth_bot"><img src="../image_frontend/bg-section-bottom-mobile-1.svg"></div>
+            <div class="right5"><img src="../image_frontend/illustration-grow-together.svg" class="pic"></div>
+        </div>
         <div class="four">
             <div class="left4"><img src="../image_frontend/illustration-flowing-conversation.svg" class="pic"></div>
             <div class="right4" align="left">
@@ -51,44 +61,49 @@
             </div>
         </div>
         <div class="five_top">
-            <img src="../image_frontend/bg-section-top-desktop-2.svg"
-        </div>        <div class="five">
-            <div class="left7" align="left">
-                <h2>Your Users</h2>
-                <p> It takes no time at all to integrate Huddle with your app's authentication solution.
-                    This means, once signed in to your app, your users can start chatting immediately.
-                </p>
+            <img src="../image_frontend/bg-section-top-desktop-2.svg" </div>
+            <div class="five">
+                <div class="left7" align="left">
+                    <h2>Your Users</h2>
+                    <p> It takes no time at all to integrate Huddle with your app's authentication solution.
+                        This means, once signed in to your app, your users can start chatting immediately.
+                    </p>
+                </div>
+                <div class="right7"><img src="../image_frontend/illustration-your-users.svg" class="pic"></div>
             </div>
-            <div class="right7"><img src="../image_frontend/illustration-your-users.svg" class="pic"></div>
-        </div>
-        <div class="five_bot"><img src="../image_frontend/bg-section-bottom-desktop-2.svg"></div>
-        <div class="six">
-            <h2>Ready To Build Your Community?</h2>
-            <button class="start" type="button" onclick="">
-                Get Started For Free
+            <div class="five_bot"><img src="../image_frontend/bg-section-bottom-desktop-2.svg"></div>
+            <div class="six">
+                <h2>Ready To Build Your Community?</h2>
+                <button class="start" type="button" onclick="">
+                    Get Started For Free
 
-            </button>
-        </div><div class="footer_top"><img src="../image_frontend/bg-footer-top-desktop.svg"></div>
-        <footer>
-            <div class="boxes" align="left">
-                <div class="foot">
-                            >                    <h2>Huddle</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua</p>
-                    <address>Phone: +1-543-123-4567<br>
-                        example@huddle.com</address><div class="new">
+                </button>
+            </div>
+            <div class="footer_top"><img src="../image_frontend/bg-footer-top-desktop.svg"></div>
+            <footer>
+                <div class="boxes" align="left">
+                    <div class="foot">
+                        > <h2>Huddle</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua</p>
+                        <address>Phone: +1-543-123-4567<br>
+                            example@huddle.com</address>
+                        <div class="new">
                             <div><img class="icon" src="../image_frontend/icon-facebook.svg"></div>
                             <div><img class="icon" src="../image_frontend/icon-twitter.svg"></div>
                             <div><img class="icon" src="../image_frontend/icon-instagram.svg"></div>
                         </div>
-                </div>
-                <div class="foot"><h2> Newsletter</h2>
-                <p> To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
-                    send you spam or pass on your email address
-                  </p><div class="last"><input class="type" autocomplete="off" type="search"> <button class="sub" type="button" onclick="">
-                    Subscribe
-                </button></div>
-        </footer>
+                    </div>
+                    <div class="foot">
+                        <h2> Newsletter</h2>
+                        <p> To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never
+                            send you spam or pass on your email address
+                        </p>
+                        <div class="last"><input class="type" autocomplete="off" type="search"> <button class="sub"
+                                type="button" onclick="">
+                                Subscribe
+                            </button></div>
+            </footer>
     </main>
 
     <!-- 
