--- a/frontend_mentor/css/huddle_landing_blocks.html
+++ b/frontend_mentor/css/huddle_landing_blocks.html
@@ -18,7 +18,7 @@
     <main class="container">
         <div class="first">
             <header>
-                <img class="logo" src="../image_frontend/logo.svg">
+                <img class="logo" src="../image_frontend/huddle.svg">
                 <button class="try" type="button" onclick="">Try it Free</button>
 
             </header>
