--- a/frontend_mentor/css/profile_card.html
+++ b/frontend_mentor/css/profile_card.html
@@ -1,37 +1,43 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frontend Mentor | Profile card component</title>
-<link rel="stylesheet" href="profile_card.css">
+  <link rel="stylesheet" href="profile_card.css">
 </head>
+
 <body>
-    <main class="container">
-        <div class="bg">
-        <div class="bg_top"><img  class="image" src="../image_frontend/bg-pattern-top.svg"></div>
-        <div class="bg_bottom"><img class="image" src="../image_frontend/bg-pattern-bottom.svg"></div></div>
-        <div class="box">
-            <div class="top"></div>
-            <div class="bottom"></div>
+  <main class="container">
+    <div class="bg">
+      <div class="bg_top">
+      </div>
+      <div class="bg_bottom">
+      </div>
+      <div class="box">
+        <div class="toppest"><img class="victor" src="../image_frontend/image-victor.jpg"></div>
+        <div class="name">
+          <span><b>Victor Crest </b> 26</span>
+          <div class="second"> London</div>
+          <hr>
+          <div class="footer">
+            <div class="one"><span><b>80K</b></span>
+              <div>Followers</div>
+            </div>
+            <div class="two"><span><b>803K</b></span>
+              <div>Likes</div>
+            </div>
+            <div class="three"><span><b>1.4K</b></span>
+              <div> Photos</div>
+            </div>
+          </div>
+
         </div>
-    </main>
-  <!-- Victor Crest
-  26
-  London
+      </div>
+    </div>
 
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos -->
-  
+  </main>
 </body>
+
 </html>
