--- a/indexes.html
+++ b/indexes.html
@@ -317,6 +317,8 @@
                         </div>
                         <div> <a href="./frontend_mentor/css/profile_card.css">Profile Card Component Main CSS</a></div>
                         <div> <a href="./frontend_mentor/css/profile_card.html">Profile Card Component Main</a></div>
+                        <div> <a href="./frontend_mentor/css/four_card.html">Four card feature section</a></div>
+                        <div> <a href="./frontend_mentor/css/four_card.css">Four card feature section CSS</a></div>
                     </td>
                     <td>
                         <div> <a href="./frontend_mentor/js/base.html">Base Apparel coming soon</a></div>
