--- a/indexes.html
+++ b/indexes.html
@@ -349,6 +349,10 @@
                         </div>
                         <div> <a href="./frontend_mentor/js/project_tracking.css">Project tracking intro component
                                 CSS.</a></div>
+                        <div> <a href="./frontend_mentor/js/sunnyside.css">Sunnyside agency landing page
+                                CSS.</a></div>
+                        <div> <a href="./frontend_mentor/js/sunnyside.html">Sunnyside agency landing page
+                            </a></div>
 
                     </td>
                     <td>
