--- a/frontend_mentor/css/chat.html
+++ b/frontend_mentor/css/chat.html
@@ -4,12 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
-  <title>Frontend Mentor | [Challenge Name Here]</title>
-
+  <title>Frontend Mentor | Chat </title>
   <link rel="stylesheet" href="chat.css">
 </head>
 
@@ -32,7 +28,6 @@
               </div>
               <div class="menu3" align="center">
                 <p class="para">Samuel Green<br>Available to Walk</p>
-
               </div>
               <div class="menu4">&#10247;</div>
             </div>
@@ -54,9 +49,11 @@
           <div class="sixth_box"> 30 minute walk &#32;
             $29</div>
           <div class="seventh_box">1 hour walk &#32;
-            $49</div><div class="msg">
-              <input class="type" autocomplete="off" autofocus name="q" placeholder="Type a message…" type="search">
-            </div><div class="circle">&#62;</div>
+            $49</div>
+          <div class="msg">
+            <input class="type" autocomplete="off" autofocus name="q" placeholder="Type a message…" type="search">
+          </div>
+          <div class="circle">&#62;</div>
         </div>
         <div class="right">
           <h2>Simple booking</h2>
@@ -64,10 +61,8 @@
             discuss arrangements and<br> make bookings. Once the walk has been completed you can <br>rate
             your walker and book again all through the chat.</p>
         </div>
-        
       </div>
     </div>
-
   </main>
   </div>
 </body>
