--- a/frontend_mentor/css/clipboard.html
+++ b/frontend_mentor/css/clipboard.html
@@ -4,13 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
-
   <link rel="stylesheet" href="clipboard.css">
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 
 <body>
@@ -111,14 +106,17 @@
         <img src="../image_frontend/logo.svg" alt="Logo" class="logo1" align="center">
       </div>
       <div class="fin1"><a href="www.example.com">
-        <h5>FAQs</a><br><a href="www.example.com">Contact Us</h5></a>
+          <h5>FAQs
+        </a><br><a href="www.example.com">Contact Us</h5></a>
       </div>
       <div class="fin1"><a href="www.example.com">
-        <h5>Privacy Policy</a><br>
-          <a href="www.example.com">Press Kit</h5></a>
+          <h5>Privacy Policy
+        </a><br>
+        <a href="www.example.com">Press Kit</h5></a>
       </div>
       <div class="fin1"><a href="www.example.com">
-        <h5>Install Guide</h5></a>
+          <h5>Install Guide</h5>
+        </a>
       </div>
     </div>
     <div class="final3"></div>
