--- a/frontend_mentor/fylo-dark-theme-landing-page-master/fylo-dark-theme-landing-page-master/index.html
+++ b/frontend_mentor/fylo-dark-theme-landing-page-master/fylo-dark-theme-landing-page-master/index.html
@@ -1,49 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- displays site properly based on user's device -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  
+  <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
 
-    <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
-    <link rel="stylesheet" href="fylo_dark.css">
-
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
 </head>
-
 <body>
-    <main class="container">
-        <header>
-            <img class="logo" src="../image_frontend/logo1.svg">
-            <div class="first">
-                <div class="one" href="#">Features</div>
-                <div class="two" href="#">Team</div>
-                <div class="three" href="#"> Sign In</div>
-            </div>
-        </header>
-        <div class="second">
-            <img src="../image_frontend/illustration-intro.png" class="four">
-        </div>
-        <div class="five">
-        </div>
-        <div class="seven">
-            <h1>All your files in one secure location,<br> accessible anywhere.</h1>
-            <p class="para">Fylo stores all your most important files in one secure location. <br>Access them
-                wherever
-                you need, share and collaborate with<br> friends family, and co-workers.</p>
-        </div>
-    </main>
+  Features
+  Team
+  Sign In
 
+  All your files in one secure location, accessible anywhere.
 
+  Fylo stores all your most important files in one secure location. Access them wherever 
+  you need, share and collaborate with friends family, and co-workers.
 
-
-
-
-
-
-    <!--Get Started
+  Get Started
 
   Access your files, anywhere
 
@@ -113,9 +94,13 @@
 
   Contact Us
   Terms
-  Privacy -->
+  Privacy
 
-
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </p>
+  </footer>
 </body>
-
 </html>
