--- a/frontend_mentor/js/sunnyside.html
+++ b/frontend_mentor/js/sunnyside.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- displays site properly based on user's device -->
-
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
     <title>Frontend Mentor | Sunnyside agency landing page</title>
@@ -28,6 +26,9 @@
                     </a>
                     <div><input href="#" class="open1" type="submit" value="Contact"></div>
                 </div>
+                <a href="../image_frontend/icon-close.svg" class="menus" onclick="myFunction()">
+                    <i class="menus"></i>
+                </a>
             </header>
         </div>
         <div class="first">
@@ -159,16 +160,16 @@
             </div>
         </div>
     </main>
-    <!-- <script>
+    <script>
         function myFunction() {
-            var x = document.getElementsByClassName("menu");
+            var x = document.getElementsByClassName("menus");
             if (x.style.display === "block") {
                 x.style.display = "none";
             } else {
                 x.style.display = "block";
             }
         }
-    </script> -->
+    </script>
 </body>
 
 </html>
