--- a/indexes.html
+++ b/indexes.html
@@ -339,9 +339,13 @@
                             </a></div>
                         <div> <a href="./frontend_mentor/js/slide2.html">Coding Bootcamp Testimonials Slider Master
                                 support</a></div>
-                        <div> <a href="./frontend_mentor/js/fylo_dark.html">Fylo Dark Theme Landing Page Master.</a>
+                        <div> <a
+                                href="./frontend_mentor/fylo-dark-theme-landing-page-master/fylo-dark-theme-landing-page-master/fylo_dark.html">Fylo
+                                Dark Theme Landing Page Master.</a>
                         </div>
-                        <div> <a href="./frontend_mentor/js/fylo_dark.css">Fylo Dark Theme Landing Page Master CSS.</a>
+                        <div> <a
+                                href="./frontend_mentor/fylo-dark-theme-landing-page-master/fylo-dark-theme-landing-page-master/themes/fylo_dark.css">Fylo
+                                Dark Theme Landing Page Master CSS.</a>
                         </div>
                         <div> <a href="./frontend_mentor/js/blogr.css">Blogr Landing Page CSS.</a></div>
                         <div> <a href="./frontend_mentor/js/blogr.html">Blogr Landing Page.</a></div>
