--- a/frontend_mentor/testimonials-grid-section-main/testimonials.html
+++ b/frontend_mentor/testimonials-grid-section-main/testimonials.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Testimonial Grid Section</title>
-  <link rel="stylesheet" href="testimonial.css">
+  <link rel="stylesheet" href="./themes/testimonial.css">
 </head>
 
 <body>
   <main class="container">
+    <div class="bg"></div>
     <div id="card1">
       <header>
         <table>
