--- a/frontend_mentor/fylo-data-storage-component-master/fylo.html
+++ b/frontend_mentor/fylo-data-storage-component-master/fylo.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Frontend Mentor | Fylo data storage component</title>
-  <link rel="stylesheet" href="fylo.css">
+  <link rel="stylesheet" href="./themes/fylo.css">
 </head>
 <!DOCTYPE html>
 <html lang="en">
@@ -24,12 +24,12 @@
     <div class="box">
       <div class="content">
         <div class="logo-div">
-          <img class="logo" alt="fylo logo" src="../image_frontend/fylo.svg">
+          <img class="logo" alt="fylo logo" src="./images/logo.svg">
         </div>
         <div class="menu">
-          <div class="icon"><img src="../image_frontend/icon-document.svg" alt="document"></div>
-          <div class="icon"><img src="../image_frontend/icon-folder.svg" alt="folder"></div>
-          <div class="icon"><img src="../image_frontend/icon-upload.svg" alt="upload"></div>
+          <div class="icon"><img src="./images/icon-document.svg" alt="document"></div>
+          <div class="icon"><img src="./images/icon-folder.svg" alt="folder"></div>
+          <div class="icon"><img src="./images/icon-upload.svg" alt="upload"></div>
         </div>
       </div>
       <div id="main">
