--- a/indexes.html
+++ b/indexes.html
@@ -281,10 +281,12 @@
                                 Grid Section CSS</a>
                         </div>
                         <div>
-                            <a href="./frontend_mentor/css/fylo.html">Fylo Data Storage component master</a>
+                            <a href="./frontend_mentor/fylo-data-storage-component-master/fylo.html">Fylo Data Storage
+                                component master</a>
                         </div>
                         <div>
-                            <a href="./frontend_mentor/css/fylo.css">Fylo Data Storage component master CSS</a>
+                            <a href="./frontend_mentor/fylo-data-storage-component-master/themes/fylo.css">Fylo Data
+                                Storage component master CSS</a>
                         </div>
                         <div>
                             <a href="./frontend_mentor/clipboard-landing-page-master/clipboard.html">Clipboard Landing
